# ConsoleGraphicsLib

./: .gitignore  CMakeLists.txt  README.md  buffer.c  buffer.h  charmap.c  charmap.h  clone.sh  color.c  color.h  common.h  coremath.c  coremath.h  ctx.c  ctx.h  cursor.c  cursor.h  dev.c  dev.h  gmath.c  input.c  input.h  light.c  light.h  main.c  mem.c  mem.h  render.c  render.h  render_core.c  render_core.h  render_utils.c  render_utils.h  run.sh  sig.h  simd.h  terminal.c  terminal.h  thread.c  thread.h  (+1 more)
hhpc/: hhpc  hhpc.c
